# mongoagg

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
mongoagg/: __init__.py  core.py  exceptions.py  models.py
tests/: test_core.py
