[tool.poetry]
name = "mongoagg"
version = "0.1.5"
description = "MongoDB Aggregation Pipeline Builder"
authors = [
    "scratchingmycranium <41268767+scratchingmycranium@users.noreply.github.com>",
]
readme = "README.md"
packages = [{ include = "mongoagg" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.4"
pymongo = "^4.6.2"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
